// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestBillingFormVanilla should render correctly 1`] = `
<form
  name="checkoutBilling"
>
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED"
    color="text.primary"
    component="p"
    data-locator="billing-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    lbl_billing_paymentMethodTitle
  </Styled(BodyCopy)>
  <Styled(PaymentMethods)
    labels={Object {}}
  />
  <div
    className="elem-mt-LRG elem-pb-XL     "
  />
  <Styled(CheckoutFooter)
    backLinkHandler={[Function]}
    backLinkText=""
    hideBackLink={true}
    nextButtonText=""
  />
</form>
`;

exports[`GuestBillingFormVanilla should render correctly when props change 1`] = `
<form
  name="checkoutBilling"
>
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED"
    color="text.primary"
    component="p"
    data-locator="billing-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    lbl_billing_paymentMethodTitle
  </Styled(BodyCopy)>
  <Styled(PaymentMethods)
    labels={Object {}}
  />
  <div
    className="elem-mt-LRG elem-pb-XL     "
  >
    <AddNewCCForm
      cardType="VISA"
      cvvError="error"
      cvvInfo={
        <ForwardRef
          aligned="right"
          fontFamily="secondary"
          message={
            <ForwardRef
              className="cvv-code-info"
              dataLocator="cvv-code-info"
              richTextHtml=""
            />
          }
        >
          <ForwardRef
            height="10"
            src="/static/images/info-icon.png"
            width="10"
          />
        </ForwardRef>
      }
      labels={Object {}}
    />
    <CheckoutAddress
      billingData={Object {}}
      dispatch={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "meta": Object {
                  "field": "cardType",
                  "form": "checkoutBilling",
                  "persistentSubmitErrors": undefined,
                  "touch": undefined,
                },
                "payload": "VISA",
                "type": "@@redux-form/CHANGE",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isGuest={true}
      isSameAsShippingChecked={true}
      labels={Object {}}
      orderHasShipping={true}
      shippingAddress={null}
    />
  </div>
  <Styled(CheckoutFooter)
    backLinkHandler={[Function]}
    backLinkText=""
    hideBackLink={true}
    nextButtonText=""
  />
</form>
`;
